2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTemplateValue.m: Implement initialize method to set the
	version of concrete classes to be that of the abstract class which
	actually performs encoding/decoding ... should correct archiving.
	Problem reported by Gerrit Van Dyk

2002-02-26  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSUnarchiver.m 
	([NSUnarchiver +classNameDecodedForArchiveClassName:]): 
	([NSUnarchiver -classNameDecodedForArchiveClassName:]): 
	return nil if the class name is not present.

2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Fixes to work on mingw.
	* Source/NSHost.m: Update for current winsock on mingw.
	* Source/NSPortNameServer.m: Update for current winsock on mingw.
	* Source/WindowsFileHandle.m: Fix to work for basic socket I/O.
	* Tools/gdomap.c: many changes ... several fixes to work on mingw
	rewrite some clumsy inefficient code, make variables and functions
	local. etc.
	* Source/NSUnarchiver.m: ([versionForClassName:]) return NSNotFound
	if the class name was not present.

Mon Feb 25 15:26:38 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m ([-initWithPath:]): Return nil if the path
	can't be read.  Fixed memory leak in case of nil argument.
	* Headers/gnustep/base/NSBundle.h: Documented some methods.
	
2002-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile: Move xml and mime classes into an additional
	library, and make base library depend on it.  EXPERIMENTAL.
	* Tools/gdomap.c: Try to get output working again after last changes.
	Add first attempt at MINGW support for getting network interface info.
	library, and make base library depend on it.
	EXPERIMENTAL - activate using 'make add=yes'

2002-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Rewrote key-value coding key manipulation to use
	a char array for speed.  Moved functions for converting between object